# ecole

./: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
cmake/: DefaultSettings.cmake
dev/: conda.yaml  singularity.def
libecole/: CMakeLists.txt  conanfile.txt
libecole/benchmarks/: CMakeLists.txt  conanfile.txt
libecole/benchmarks/src/: bench-observation.cpp  utils.hpp
libecole/benchmarks/src/scip/: bench-model.cpp  index-branchrule.hpp
libecole/include/ecole/observation/: constraint-matrix.hpp  nodebipartite.hpp
libecole/include/ecole/reward/: dualbound.hpp
libecole/src/instance/: capacitated-facility-location.cpp  combinatorial-auction.cpp
libecole/src/observation/: constraint-matrix.cpp  nodebipartite.cpp
libecole/src/reward/: dualbound.cpp
libecole/tests/: CMakeLists.txt
libecole/tests/src/observation/: test-constraint-matrix.cpp
libecole/tests/src/reward/: test-dualbound.cpp
python/: CMakeLists.txt
python/benchmarks/: bench_model.py  index_branchrule.py  utils.py
python/src/ecole/: __init__.py  environment.py
python/src/ecole/core/: scip.cpp  span_bind.hpp
python/tests/: test_scip.py
